création : mise en place de la page horloge

--- a/src/static/horloge.html
+++ b/src/static/horloge.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Horloge</h1>
     </header>
-    <main>
+    <main class="horloge">
         <p id="horloge"></p>
         <nav>
             <ul class="navLinks">
