--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="navItems"><a href="chronometre.html">Chronomètre</a></li>
                 <li class="navItems"><a href="src/static/horloge.html">Horloge</a></li>
                 <li class="navItems"><a href="minuteur.html">Minuteur</a></li>
-                <li class="navItems"><a href="reveil.html">Réveil</a></li>
+                <li class="navItems"><a href="src/static/reveil.html">Réveil</a></li>
             </ul>
         </nav>
     </main>
