--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <nav>
             <ul class="navLinks">
-                <li class="navItems"><a href="chronometre.html">Chronomètre</a></li>
+                <li class="navItems"><a href="src/static/chronometre.html">Chronomètre</a></li>
                 <li class="navItems"><a href="src/static/horloge.html">Horloge</a></li>
                 <li class="navItems"><a href="minuteur.html">Minuteur</a></li>
                 <li class="navItems"><a href="src/static/reveil.html">Réveil</a></li>
