--- a/src/static/chronometre.html
+++ b/src/static/chronometre.html
@@ -12,9 +12,9 @@
     </header>
     <main class="chronometre">
         <article>
-            <p id="chronometre">0</p>
+            <p id="chronometre">00:00:00</p>
             <div class="btn-chrono">
-                <button>start</button>
+                <button id="start">start</button>
                 <button>stop</button>
                 <button>tour</button>
                 <button>reset</button>
@@ -28,5 +28,6 @@
             </ul>
         </nav>
     </main>
+    <script src="../js/chrono.js"></script>
 </body>
 </html>
