ajout de la balise de ul pour l'ajout des tours enregistré

--- a/src/static/chronometre.html
+++ b/src/static/chronometre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>chronometre</title>
+    <title>Chronomètre</title>
 </head>
 <body>
     <header>
@@ -14,15 +14,14 @@
         <article>
             <p id="chronometre">00:00:00</p>
             <div class="btn-chrono">
-                <button id="start">start</button>
-                <button>stop</button>
-                <button>tour</button>
-                <button>reset</button>
+                <button id="start">Start</button>
+                <button id="tour">Tour</button>
+                <button id="reset">Reset</button>
             </div>
+            <ul id="tours"></ul>
         </article>
         <br>
         <nav>
-
             <ul class="navLinks">
                 <li><a class="navItems" href="../../index.html">retour au menu</a></li>
             </ul>
