modification de l'import du minuteur

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="navLinks">
                 <li class="navItems"><a href="src/static/chronometre.html">Chronomètre</a></li>
                 <li class="navItems"><a href="src/static/horloge.html">Horloge</a></li>
-                <li class="navItems"><a href="minuteur.html">Minuteur</a></li>
+                <li class="navItems"><a href="src/static/minuteur.html">Minuteur</a></li>
                 <li class="navItems"><a href="src/static/reveil.html">Réveil</a></li>
             </ul>
         </nav>
